--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,7 @@ target_sources(app PRIVATE
 target_include_directories(app PRIVATE
   ${ZEPHYR_TRUSTED_FIRMWARE_M_MODULE_DIR}/interface/include
   ext/NanoCBOR/include
+  include
 )
 
 target_compile_definitions(app PRIVATE
