sample: confidential_ai: Add shell command "info UUID" support
The secure inference application on the NS side is doing so many activities
like requesting UUID generation, the export public key and running inference
engine etc., it is better to migrate this under shell command which provides
the user option to interact with the application to run the required service
and get information, a starting point this commit adds the shell command
"info UUID" support, add shell creating command structures, CMake, Kconfig,
prj shell config .

Signed-off-by: Rajkumar Kanagaraj <rajkumar.kanagaraj@linaro.org>

--- a/Kconfig
+++ b/Kconfig
@@ -13,4 +13,10 @@ source "subsys/logging/Kconfig.template.log_config"
 
 endmenu
 
+config SECURE_INFER_SHELL_CMD_SUPPORT
+	bool "Enable custom shell commands for secure inference"
+	depends on SHELL
+	help
+	  Enabling this option will make secure inference shell commands available.
+
 source "Kconfig.zephyr"
