--- a/prj.conf
+++ b/prj.conf
@@ -9,6 +9,13 @@ CONFIG_LOG_MODE_IMMEDIATE=y
 CONFIG_LOG_RUNTIME_FILTERING=y
 CONFIG_LOG_DEFAULT_LEVEL=4
 
+# PSA shell
+CONFIG_SHELL=y
+CONFIG_SHELL_HISTORY=y
+CONFIG_SHELL_VT100_COLORS=y
+CONFIG_SHELL_CMDS=n
+CONFIG_SECURE_INFER_SHELL_CMD_SUPPORT=y
+
 CONFIG_BUILD_WITH_TFM=y
 CONFIG_TFM_IPC=y
 
