--- a/tfm_secure_inference_partitions/tfm_huk_deriv_srv/CMakeLists.txt
+++ b/tfm_secure_inference_partitions/tfm_huk_deriv_srv/CMakeLists.txt
@@ -7,39 +7,39 @@
 # The name of the target is required to be of the pattern
 # tfm_app_rot_partition_x or tfm_psa_rot_partition_x, as it affects how the
 # linker script will lay the partition in memory.
-add_library(tfm_app_rot_partition_huk_key_derivation STATIC)
+add_library(tfm_app_rot_partition_huk_deriv STATIC)
 
-target_include_directories(tfm_app_rot_partition_huk_key_derivation
+target_include_directories(tfm_app_rot_partition_huk_deriv
     INTERFACE
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
     PRIVATE
-        ${CMAKE_BINARY_DIR}/tfm_secure_inference_partitions/tfm_huk_key_derivation_service
+        ${CMAKE_BINARY_DIR}/tfm_secure_inference_partitions/tfm_huk_deriv_srv
 )
 target_include_directories(tfm_partitions
     INTERFACE
-        ${CMAKE_BINARY_DIR}/tfm_secure_inference_partitions/tfm_huk_key_derivation_service
+        ${CMAKE_BINARY_DIR}/tfm_secure_inference_partitions/tfm_huk_deriv_srv
 )
 
-target_sources(tfm_app_rot_partition_huk_key_derivation
+target_sources(tfm_app_rot_partition_huk_deriv
     PRIVATE
-        tfm_huk_key_derivation_service.c
-        tfm_huk_key_derivation_service_api.c
+        tfm_huk_deriv_srv.c
+        tfm_huk_deriv_srv_api.c
         cbor_cose.c
 )
 
 # The generated sources
-target_sources(tfm_app_rot_partition_huk_key_derivation
+target_sources(tfm_app_rot_partition_huk_deriv
     PRIVATE
         $<$<BOOL:${TFM_PSA_API}>:
-            ${CMAKE_BINARY_DIR}/tfm_secure_inference_partitions/tfm_huk_key_derivation_service/auto_generated/intermedia_tfm_huk_key_derivation_service.c>
+            ${CMAKE_BINARY_DIR}/tfm_secure_inference_partitions/tfm_huk_deriv_srv/auto_generated/intermedia_tfm_huk_deriv_srv.c>
 )
 target_sources(tfm_partitions
     INTERFACE
         $<$<BOOL:${TFM_PSA_API}>:
-            ${CMAKE_BINARY_DIR}/tfm_secure_inference_partitions/tfm_huk_key_derivation_service/auto_generated/load_info_tfm_huk_key_derivation_service.c>
+            ${CMAKE_BINARY_DIR}/tfm_secure_inference_partitions/tfm_huk_deriv_srv/auto_generated/load_info_tfm_huk_deriv_srv.c>
 )
 
-target_link_libraries(tfm_app_rot_partition_huk_key_derivation
+target_link_libraries(tfm_app_rot_partition_huk_deriv
     PRIVATE
         tfm_secure_api
         psa_interface
@@ -53,7 +53,7 @@ target_link_libraries(tfm_app_rot_partition_huk_key_derivation
 
 target_link_libraries(tfm_partitions
     INTERFACE
-        tfm_app_rot_partition_huk_key_derivation
+        tfm_app_rot_partition_huk_deriv
 )
 
 target_compile_definitions(tfm_partition_defs
