--- a/tfm_secure_inference_partitions/tfm_huk_deriv_srv/tfm_huk_deriv_srv.yaml
+++ b/tfm_secure_inference_partitions/tfm_huk_deriv_srv/tfm_huk_deriv_srv.yaml
@@ -8,16 +8,16 @@
 
 {
   "psa_framework_version": 1.0,
-  "name": "TFM_SP_HUK_KEY_DERIVATION",
+  "name": "TFM_SP_HUK_DERI",
   "type": "APPLICATION-ROT",
   "priority": "NORMAL",
-  "entry_point": "tfm_huk_key_derivation_req_mngr_init",
+  "entry_point": "tfm_huk_deriv_req_mgr_init",
   "stack_size": "0x2400",
 
   # Service definitions for IPC mode.
   "services" : [
     {
-      "name": "TFM_HUK_KEY_DERIVATION_EC_KEY",
+      "name": "TFM_HUK_DERIV_EC_KEY",
       "sid": "0xFFFFF001", # Bits [31:12] denote the vendor (change this),
                           # bits [11:0] are arbitrary at the discretion of the
                           # vendor.
@@ -26,7 +26,7 @@
       "version_policy": "STRICT"
     },
     {
-      "name": "TFM_HUK_KEY_DERIVATION_EXPORT_PUBLIC_KEY",
+      "name": "TFM_HUK_EXPORT_PUBKEY",
       "sid": "0xFFFFF002", # Bits [31:12] denote the vendor (change this),
                           # bits [11:0] are arbitrary at the discretion of the
                           # vendor.
@@ -35,7 +35,7 @@
       "version_policy": "STRICT"
     },
     {
-      "name": "TFM_HUK_KEY_DERIVATION_COSE_CBOR_ENC_SIGN",
+      "name": "TFM_HUK_COSE_CBOR_ENC_SIGN",
       "sid": "0xFFFFF003", # Bits [31:12] denote the vendor (change this),
                           # bits [11:0] are arbitrary at the discretion of the
                           # vendor.
@@ -44,7 +44,7 @@
       "version_policy": "STRICT"
     },
     {
-      "name": "TFM_HUK_KEY_DERIVATION_GENERATE_UUID",
+      "name": "TFM_HUK_GEN_UUID",
        "sid": "0xFFFFF004", # Bits [31:12] denote the vendor (change this),
                            # bits [11:0] are arbitrary at the discretion of the
                            # vendor.
