--- a/tfm_secure_inference_partitions/tfm_manifest_list.yaml.in
+++ b/tfm_secure_inference_partitions/tfm_manifest_list.yaml.in
@@ -13,16 +13,16 @@
   "manifest_list": [
     {
       "name": "TF-M HUK Key Derivation",
-      "short_name": "TFM_SP_HUK_KEY_DERIVATION",
-      "manifest": "${APPLICATION_SOURCE_DIR}/tfm_secure_inference_partitions/tfm_huk_key_derivation_service/tfm_huk_key_derivation_service.yaml",
-      "output_path": "${TFM_BINARY_DIR}/tfm_secure_inference_partitions/tfm_huk_key_derivation_service",
+      "short_name": "TFM_SP_HUK_DERI",
+      "manifest": "${APPLICATION_SOURCE_DIR}/tfm_secure_inference_partitions/tfm_huk_deriv_srv/tfm_huk_deriv_srv.yaml",
+      "output_path": "${TFM_BINARY_DIR}/tfm_secure_inference_partitions/tfm_huk_deriv_srv",
       "tfm_partition_ipc": true,
       #"conditional": "TFM_PARTITION_HUK_KEY_DERIVATION",
       "version_major": 0,
       "version_minor": 1,
       "linker_pattern": {
         "library_list": [
-           "*tfm_*partition_huk_key_derivation.*"
+           "*tfm_*partition_huk_deriv.*"
          ],
       }
     },
