--- a/tfm_secure_inference_partitions/tfm_tflm_service/tfm_tflm_service.yaml
+++ b/tfm_secure_inference_partitions/tfm_tflm_service/tfm_tflm_service.yaml
@@ -38,9 +38,9 @@
   ],
 
   "dependencies": [
-    "TFM_HUK_KEY_DERIVATION_EC_KEY",
-    "TFM_HUK_KEY_DERIVATION_EXPORT_PUBLIC_KEY",
-    "TFM_HUK_KEY_DERIVATION_COSE_CBOR_ENC_SIGN",
+    "TFM_HUK_DERIV_EC_KEY",
+    "TFM_HUK_EXPORT_PUBKEY",
+    "TFM_HUK_COSE_CBOR_ENC_SIGN",
     "TFM_CRYPTO"
   ]
 }
