sample: confidential_ai: Add 'infer' shell command support
Add the below infer shell command support
- Command 'infer model' - List model label, IDs, and status
- Command 'infer get <model label> <value>' -  Run inference for a single
  float value
- Command 'infer get <model label> <start_val> <stop_val>' - Run inference for
  the range of values in increments of +1.0
- Command 'infer get <model label> <start_val> <stop_val> <stride>' - Run
  inference for the range of values in increments of stride

Note: Currently the model label is used for the basic validation check,
this label is later used to switch between models based on the model
label argument passed with infer get command ( when we have more than
one model support ).

Signed-off-by: Rajkumar Kanagaraj <rajkumar.kanagaraj@linaro.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ target_sources(app PRIVATE
   src/util_sformat.c
   src/shell/shell.c
   src/shell/cmd_key_mgmt.c
+  src/shell/cmd_infer.c
   ext/NanoCBOR/src/decoder.c
   ext/NanoCBOR/src/encoder.c
 )
