sample: Refactor key management
Moves key management to a dedicated key_mgmt file pair, and removes
a number of magic numbers for accessing keys and common values like
tje public key buffer size. Keys now have an enum for the index value
and should be reference via the enum value.

Some refactoring was done for clarity in other files that deal with
key management.

Signed-off-by: Kevin Townsend <kevin.townsend@linaro.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,7 @@ target_sources(app PRIVATE
   src/main.c
   src/pk_import_verify_sign.c
   src/cose_verify.c
+  src/key_mgmt.c
   src/tfm_sip_srv_api.c
   src/util_app_log.c
   src/util_sformat.c
