sample: Refactor infer model management and cleanup
- Moves inference model management to a dedicated infer_model_mgmt file pair.
- Add the respective model enum for  indexing the context and status.
- Rename filename relevant to its functionality.
- Update the key context init code repetition with modifying to get required
  init parameters via argument.
- Remove the redundant headers.

Signed-off-by: Rajkumar Kanagaraj <rajkumar.kanagaraj@linaro.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,10 +29,11 @@ project(tfm_secure_provisioning)
 
 target_sources(app PRIVATE
   src/main.c
-  src/pk_import_verify_sign.c
+  src/mbedtls_ecdsa_verify_sign.c
   src/cose_verify.c
   src/key_mgmt.c
   src/tfm_sip_srv_api.c
+  src/infer_model_mgmt.c
   src/util_app_log.c
   src/util_sformat.c
   src/shell/shell.c
