sample: shell: refactor shell commands
Refactors shell commands so that only shell-specific logic is
placed in the command files, and broke each level 0 shell command
into it's own source module for easier maintenance. All shell header
files were removed since these should normally never be necessary.

Some helper functions for key management and inference outputs were
moved to the appropriate key/infer mgmt source modules.

Signed-off-by: Kevin Townsend <kevin.townsend@linaro.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,10 +30,10 @@ project(tfm_secure_provisioning)
 target_sources(app PRIVATE
   src/cose/cose_verify.c
   src/cose/mbedtls_ecdsa_verify_sign.c
-  src/shell/shell.c
-  src/shell/cmd_key_mgmt.c
   src/shell/cmd_infer.c
-  src/infer_model_mgmt.c
+  src/shell/cmd_info.c
+  src/shell/cmd_keys.c
+  src/infer_mgmt.c
   src/key_mgmt.c
   src/main.c
   src/tfm_partition_huk.c
