--- a/prj.conf
+++ b/prj.conf
@@ -15,6 +15,7 @@ CONFIG_SHELL_HISTORY=y
 CONFIG_SHELL_VT100_COLORS=y
 CONFIG_SHELL_CMDS=n
 CONFIG_SECURE_INFER_SHELL_CMD_SUPPORT=y
+CONFIG_AZURE_SHELL_CMD_SUPPORT=y
 
 CONFIG_BUILD_WITH_TFM=y
 CONFIG_TFM_IPC=y
