--- a/prj.conf
+++ b/prj.conf
@@ -16,6 +16,7 @@ CONFIG_SHELL_VT100_COLORS=y
 CONFIG_SHELL_CMDS=n
 CONFIG_SECURE_INFER_SHELL_CMD_SUPPORT=y
 CONFIG_AZURE_SHELL_CMD_SUPPORT=y
+CONFIG_NET_SHELL=y
 
 CONFIG_BUILD_WITH_TFM=y
 CONFIG_TFM_IPC=y
@@ -38,9 +39,16 @@ CONFIG_CBPRINTF_FP_SUPPORT=y
 CONFIG_MBEDTLS=y
 CONFIG_MBEDTLS_BUILTIN=y
 CONFIG_MBEDTLS_ENABLE_HEAP=y
-CONFIG_MBEDTLS_HEAP_SIZE=32768
+CONFIG_MBEDTLS_HEAP_SIZE=100000
+CONFIG_MBEDTLS_SSL_MAX_CONTENT_LEN=10240
+CONFIG_MBEDTLS_PEM_CERTIFICATE_FORMAT=y
 CONFIG_MBEDTLS_USER_CONFIG_ENABLE=y
 CONFIG_MBEDTLS_USER_CONFIG_FILE="user-tls.h"
+
+# ECDSA modes
+CONFIG_MBEDTLS_ECP_ALL_ENABLED=y
+CONFIG_MBEDTLS_KEY_EXCHANGE_ECDHE_ECDSA_ENABLED=y
+CONFIG_MBEDTLS_KEY_EXCHANGE_ECDH_ECDSA_ENABLED=y
 
 # JSON
 CONFIG_JSON_LIBRARY=y
@@ -48,3 +56,63 @@ CONFIG_JSON_LIBRARY=y
 # Enforce stack protection.
 CONFIG_HW_STACK_PROTECTION=y
 CONFIG_MPU_STACK_GUARD=y
+
+# Enable networking
+CONFIG_NETWORKING=y
+CONFIG_NET_IPV6=n
+CONFIG_NET_IPV4=y
+CONFIG_NET_IF_MAX_IPV4_COUNT=2
+CONFIG_NET_IF_UNICAST_IPV4_ADDR_COUNT=3
+
+CONFIG_NET_TCP=y
+
+CONFIG_NET_SOCKETS=y
+CONFIG_NET_SOCKETS_SOCKOPT_TLS=y
+
+CONFIG_NET_DHCPV4=y
+
+CONFIG_SOCKS=n
+
+CONFIG_MQTT_LIB=y
+CONFIG_MQTT_LIB_TLS=y
+
+CONFIG_NET_CONFIG_SETTINGS=y
+CONFIG_NET_CONNECTION_MANAGER=y
+CONFIG_NET_MGMT_EVENT_STACK_SIZE=1024
+CONFIG_NET_MGMT_EVENT_QUEUE_SIZE=5
+CONFIG_NET_MGMT_EVENT_LOG_LEVEL_DBG=n
+
+# This is too small, for some reason.
+CONFIG_NET_CONNECTION_MANAGER_STACK_SIZE=1024
+
+# NEVER NEVER DO THIS
+CONFIG_TEST_RANDOM_GENERATOR=y
+
+CONFIG_DNS_RESOLVER=y
+CONFIG_DNS_RESOLVER_ADDITIONAL_BUF_CTR=2
+
+# Enable Logging support
+CONFIG_LOG_MODE_IMMEDIATE=y
+CONFIG_NET_LOG=n
+CONFIG_NET_TCP_LOG_LEVEL_DBG=n
+CONFIG_NET_SOCKETS_LOG_LEVEL_DBG=n
+CONFIG_MQTT_LOG_LEVEL_DBG=n
+CONFIG_NET_DHCPV4_LOG_LEVEL_INF=n
+CONFIG_NET_IF_LOG_LEVEL_DBG=n
+CONFIG_MBEDTLS_DEBUG=n
+#CONFIG_MBEDTLS_DEBUG_LEVEL=4
+CONFIG_SOCKS_LOG_LEVEL_DBG=n
+CONFIG_NET_CONFIG_LOG_LEVEL_DBG=y
+CONFIG_NET_CONNECTION_MANAGER_LOG_LEVEL_DBG=n
+CONFIG_DNS_RESOLVER_LOG_LEVEL_DBG=n
+CONFIG_NET_CONTEXT_LOG_LEVEL_DBG=n
+
+CONFIG_NET_BUF_RX_COUNT=72
+CONFIG_NET_BUF_TX_COUNT=72
+
+# For debugging.
+CONFIG_HW_STACK_PROTECTION=y
+CONFIG_MPU_STACK_GUARD=y
+
+# Increased workqueue stack needed for TLS.
+CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2048
