sample: huk: Add user-defined seed option
TF-M defines a hard-coded HUK value for the mps2 and mps3 platforms,
meaning that every instance of this sample will derive the same
key values.

This commit provides an optional `HUK_DERIV_SEED_EXTRA` value in the
secure parition that can be used to provide an additional label
component for key derivation, enabling key diversity when testing on
emulated platforms.

A KConfig wrapper for this variable is also added via the
`DCONFIG_SECURE_INFER_HUK_DERIV_SEED_EXTRA` config flag to facilitate
passing the seed from Zephyr's build system up to the TF-M build
system.

The seed value must be less than 16 characters in size.

It can be defined at compile time with west via:

$ west build -p -b mps2_an521_ns -t run -- \
  -DCONFIG_SECURE_INFER_HUK_DERIV_SEED_EXTRA=\"123456789012345\"

Signed-off-by: Kevin Townsend <kevin.townsend@linaro.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,4 +66,15 @@ set_property(TARGET zephyr_property_target
              -DCRYPTO_ENGINE_BUF_SIZE=0x2400
 )
 
+# Since the MPS2/MPS3 boards in TF-M use a hard-coded HUK value, we need to
+# append a custom seed value during key derivation for unique key(s). This
+# value is exposed here as a convenience so that west can pass it on to TF-M,
+# but is only used in the secure partition(s).
+if (CONFIG_SECURE_INFER_HUK_DERIV_SEED_EXTRA)
+  set_property(TARGET zephyr_property_target
+              APPEND PROPERTY TFM_CMAKE_OPTIONS
+              -DHUK_DERIV_SEED_EXTRA=${CONFIG_SECURE_INFER_HUK_DERIV_SEED_EXTRA}
+  )
+endif()
+
 zephyr_include_directories(${APPLICATION_SOURCE_DIR}/src/tls_config)
