sample: huk: Add new tfm huk hash sign secure service
Add the new tfm huk hash sign secure service which calculates the hash value of
the given CSR payload and sign the hash value using the private key of the
given key ID and return the signed payload.

Signed-off-by: Rajkumar Kanagaraj <rajkumar.kanagaraj@linaro.org>

--- a/tfm_secure_partitions/tfm_huk_deriv_srv/tfm_huk_deriv_srv.yaml
+++ b/tfm_secure_partitions/tfm_huk_deriv_srv/tfm_huk_deriv_srv.yaml
@@ -52,6 +52,15 @@
         "version": 1,
         "version_policy": "STRICT"
     },
+    {
+      "name": "TFM_HUK_HASH_SIGN",
+       "sid": "0xFFFFF005", # Bits [31:12] denote the vendor (change this),
+                           # bits [11:0] are arbitrary at the discretion of the
+                           # vendor.
+        "non_secure_clients": true,
+        "version": 1,
+        "version_policy": "STRICT"
+    },
   ],
 
   "dependencies": [
