sample: X509: Add X509 CSR generation support
MbedTLS is already provided API for generating CSR, but the problem is
accessing the PSA crypto secure service to sign the CSR hash value from NS-side
as secure inferencing, all the keys are generated and maintained under HUK
secure partition because of that NS-side cant directly use PSA crypto service
for a sign the hash value so added similar implementation of mbedTLS except it
request newly added TFM huk hash sign secure service for calculating the hash
value of CSR payload and sign it.

Signed-off-by: Rajkumar Kanagaraj <rajkumar.kanagaraj@linaro.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ set_property(TARGET zephyr_property_target
 #   ${PARTITION_PATHS}
 #   )
 
-project(tfm_secure_provisioning)
+project(tfm_secure_inference)
 
 target_sources(app PRIVATE
   src/cose/cose_verify.c
@@ -40,6 +40,7 @@ target_sources(app PRIVATE
   src/tfm_partition_tflm.c
   src/util_app_log.c
   src/util_sformat.c
+  src/x509_csr_gen.c
   ext/NanoCBOR/src/decoder.c
   ext/NanoCBOR/src/encoder.c
 )
