--- a/prj.conf
+++ b/prj.conf
@@ -40,3 +40,6 @@ CONFIG_MBEDTLS_ENABLE_HEAP=y
 CONFIG_MBEDTLS_HEAP_SIZE=32768
 CONFIG_MBEDTLS_USER_CONFIG_ENABLE=y
 CONFIG_MBEDTLS_USER_CONFIG_FILE="user-tls.h"
+
+# JSON
+CONFIG_JSON_LIBRARY=y
