Move network wait out of Azure to more general code
Other services will depend upon the networking being up, so have a
general mechanism to wait for dhcp to get us an address.

Signed-off-by: David Brown <david.brown@linaro.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,7 @@ target_sources(app PRIVATE
   src/shell/cmd_keys.c
   src/shell/shell_common.c
   src/infer_mgmt.c
+  src/dhcpwait.c
   src/key_mgmt.c
   src/main.c
   src/tfm_partition_huk.c
