sample: config: Add application config storage
Adds an application config struct that will be persisted to
protected storage.

Adds boilerplate code for the storage of any certificates
required by the application.

Signed-off-by: Kevin Townsend <kevin.townsend@linaro.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ target_sources(app PRIVATE
   src/main.c
   src/tfm_partition_huk.c
   src/tfm_partition_tflm.c
+  src/util_app_cfg.c
   src/util_app_log.c
   src/util_sformat.c
   src/x509_csr_gen.c
