--- a/prj.conf
+++ b/prj.conf
@@ -43,3 +43,7 @@ CONFIG_MBEDTLS_USER_CONFIG_FILE="user-tls.h"
 
 # JSON
 CONFIG_JSON_LIBRARY=y
+
+# Enforce stack protection.
+CONFIG_HW_STACK_PROTECTION=y
+CONFIG_MPU_STACK_GUARD=y
