Add a keys command to register with a CA
This shell command generates a CSR, wraps it and makes an HTTP post
request to the CA server, and currently just prints the message.

Signed-off-by: David Brown <david.brown@linaro.org>

--- a/prj.conf
+++ b/prj.conf
@@ -21,6 +21,9 @@ CONFIG_NET_SHELL=y
 CONFIG_BUILD_WITH_TFM=y
 CONFIG_TFM_IPC=y
 
+# Enable the HTTP client
+CONFIG_HTTP_CLIENT=y
+
 # Enable TF-M debug build
 # CONFIG_TFM_CMAKE_BUILD_TYPE_DEBUG=y
 
@@ -117,3 +120,8 @@ CONFIG_MPU_STACK_GUARD=y
 
 # Increased workqueue stack needed for TLS.
 CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2048
+
+# Large for now, but this really shouldn't be this large.
+CONFIG_SHELL_STACK_SIZE=16384
+
+CONFIG_TLS_MAX_CREDENTIALS_NUMBER=8
