--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,7 @@ project(tfm_secure_inference)
 
 target_sources(app PRIVATE
   src/azure.c
+  src/caserver.c
   src/cose/cose_verify.c
   src/cose/mbedtls_ecdsa_verify_sign.c
   src/shell/cmd_azure.c
