--- a/prj.conf
+++ b/prj.conf
@@ -98,12 +98,12 @@ CONFIG_DNS_RESOLVER_ADDITIONAL_BUF_CTR=2
 CONFIG_LOG_MODE_IMMEDIATE=y
 CONFIG_NET_LOG=n
 CONFIG_NET_TCP_LOG_LEVEL_DBG=n
-CONFIG_NET_SOCKETS_LOG_LEVEL_DBG=n
+CONFIG_NET_SOCKETS_LOG_LEVEL_DBG=y
 CONFIG_MQTT_LOG_LEVEL_DBG=n
 CONFIG_NET_DHCPV4_LOG_LEVEL_INF=n
 CONFIG_NET_IF_LOG_LEVEL_DBG=y
-CONFIG_MBEDTLS_DEBUG=n
-#CONFIG_MBEDTLS_DEBUG_LEVEL=4
+CONFIG_MBEDTLS_DEBUG=y
+CONFIG_MBEDTLS_DEBUG_LEVEL=4
 CONFIG_SOCKS_LOG_LEVEL_DBG=n
 CONFIG_NET_CONFIG_LOG_LEVEL_DBG=n
 CONFIG_NET_CONNECTION_MANAGER_LOG_LEVEL_DBG=n
@@ -113,6 +113,11 @@ CONFIG_ETHERNET_LOG_LEVEL_ERR=y
 
 CONFIG_NET_BUF_RX_COUNT=72
 CONFIG_NET_BUF_TX_COUNT=72
+# CONFIG_NET_BUF_DATA_SIZE=512
+
+# The net layer needs bigger stacks if we log messages.
+CONFIG_NET_RX_STACK_SIZE=2500
+CONFIG_NET_TX_STACK_SIZE=2500
 
 # For debugging.
 CONFIG_HW_STACK_PROTECTION=y
