Fix endif comment
The text after the endif needs to be a comment.

Signed-off-by: David Brown <david.brown@linaro.org>

--- a/src/azure-config.h.template
+++ b/src/azure-config.h.template
@@ -18,4 +18,4 @@
 #define CONFIG_SAMPLE_CLOUD_AZURE_USERNAME \
 	"<HUB-NAME>.azure-devices.net/<DEV-UUID>"
 
-#endif __AZURE_CONFIG_H__
+#endif /* not __AZURE_CONFIG_H__ */
