--- a/tfm_secure_partitions/tfm_manifest_list.yaml.in
+++ b/tfm_secure_partitions/tfm_manifest_list.yaml.in
@@ -17,7 +17,6 @@
       "manifest": "${APPLICATION_SOURCE_DIR}/tfm_secure_partitions/tfm_huk_deriv_srv/tfm_huk_deriv_srv.yaml",
       "output_path": "${TFM_BINARY_DIR}/tfm_secure_partitions/tfm_huk_deriv_srv",
       "tfm_partition_ipc": true,
-      #"conditional": "TFM_PARTITION_HUK_KEY_DERIVATION",
       "version_major": 0,
       "version_minor": 1,
       "linker_pattern": {
@@ -32,12 +31,25 @@
       "manifest": "${APPLICATION_SOURCE_DIR}/tfm_secure_partitions/tfm_tflm_service/tfm_tflm_service.yaml",
       "output_path": "${TFM_BINARY_DIR}/tfm_secure_partitions/tfm_tflm_service",
       "tfm_partition_ipc": true,
-      #"conditional": "TFM_PARTITION_TFLM_SERVICE",
       "version_major": 0,
       "version_minor": 1,
       "linker_pattern": {
         "library_list": [
            "*tfm_*partition_tflm.*"
+         ],
+      }
+    },
+    {
+      "name": "UTVM Service",
+      "short_name": "TFM_SP_UTVM_SERVICE",
+      "manifest": "${APPLICATION_SOURCE_DIR}/tfm_secure_partitions/tfm_utvm_service/tfm_utvm_service.yaml",
+      "output_path": "${TFM_BINARY_DIR}/tfm_secure_partitions/tfm_utvm_service",
+      "tfm_partition_ipc": true,
+      "version_major": 0,
+      "version_minor": 1,
+      "linker_pattern": {
+        "library_list": [
+           "*tfm_*partition_utvm.*"
          ],
       }
     },
