Sample: huk: Restrict HUK deriv service to derive key once
- Currently, 2 services (tflm & UTVM) probably call to HUK key derivation
  service to derive the unique key, added the key management to avoid the
  HUK key derivation to deriving for the second time of the same key id.
- Add the new EC key status service which gets used by N-side to find out the
  key status rather than calling the export public key service to find it.
- Change the enum order for km_key_stat_t and update all the sources
  reference that enums
- Update all the source references of sts to stat
- Update reference of seed to hpke_info as the algorithm states that is info
  field rather seed to the algorithm
- Create the preprocessor macros for log info and error

Signed-off-by: Rajkumar Kanagaraj <rajkumar.kanagaraj@linaro.org>

--- a/tfm_secure_partitions/tfm_huk_deriv_srv/tfm_huk_deriv_srv.yaml
+++ b/tfm_secure_partitions/tfm_huk_deriv_srv/tfm_huk_deriv_srv.yaml
@@ -26,7 +26,7 @@
       "version_policy": "STRICT"
     },
     {
-      "name": "TFM_HUK_EXPORT_PUBKEY",
+      "name": "TFM_HUK_EC_KEY_STAT",
       "sid": "0xFFFFF002", # Bits [31:12] denote the vendor (change this),
                           # bits [11:0] are arbitrary at the discretion of the
                           # vendor.
@@ -35,8 +35,17 @@
       "version_policy": "STRICT"
     },
     {
-      "name": "TFM_HUK_COSE_CBOR_ENC_SIGN",
+      "name": "TFM_HUK_EXPORT_PUBKEY",
       "sid": "0xFFFFF003", # Bits [31:12] denote the vendor (change this),
+                          # bits [11:0] are arbitrary at the discretion of the
+                          # vendor.
+      "non_secure_clients": true,
+      "version": 1,
+      "version_policy": "STRICT"
+    },
+    {
+      "name": "TFM_HUK_COSE_CBOR_ENC_SIGN",
+      "sid": "0xFFFFF004", # Bits [31:12] denote the vendor (change this),
                           # bits [11:0] are arbitrary at the discretion of the
                           # vendor.
       "non_secure_clients": false,
@@ -45,7 +54,7 @@
     },
     {
       "name": "TFM_HUK_GEN_UUID",
-       "sid": "0xFFFFF004", # Bits [31:12] denote the vendor (change this),
+       "sid": "0xFFFFF005", # Bits [31:12] denote the vendor (change this),
                            # bits [11:0] are arbitrary at the discretion of the
                            # vendor.
         "non_secure_clients": true,
@@ -54,7 +63,7 @@
     },
     {
       "name": "TFM_HUK_HASH_SIGN",
-       "sid": "0xFFFFF005", # Bits [31:12] denote the vendor (change this),
+       "sid": "0xFFFFF006", # Bits [31:12] denote the vendor (change this),
                            # bits [11:0] are arbitrary at the discretion of the
                            # vendor.
         "non_secure_clients": true,
