kconfig: Rename SEED appendix to LABEL for HPKE
Renames `HUK_DERIV_SEED_EXTRA` to `HUK_DERIV_LABEL_EXTRA` due to the
confusion the term seed may cause in relation to HPKE.

Signed-off-by: Kevin Townsend <kevin.townsend@linaro.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,13 +74,13 @@ set_property(TARGET zephyr_property_target
 )
 
 # Since the MPS2/MPS3 boards in TF-M use a hard-coded HUK value, we need to
-# append a custom seed value during key derivation for unique key(s). This
+# append a custom label value during key derivation for unique key(s). This
 # value is exposed here as a convenience so that west can pass it on to TF-M,
 # but is only used in the secure partition(s).
-if (CONFIG_SECURE_INFER_HUK_DERIV_SEED_EXTRA)
+if (CONFIG_SECURE_INFER_HUK_DERIV_LABEL_EXTRA)
   set_property(TARGET zephyr_property_target
               APPEND PROPERTY TFM_CMAKE_OPTIONS
-              -DHUK_DERIV_SEED_EXTRA=${CONFIG_SECURE_INFER_HUK_DERIV_SEED_EXTRA}
+              -DHUK_DERIV_LABEL_EXTRA=${CONFIG_SECURE_INFER_HUK_DERIV_LABEL_EXTRA}
   )
 endif()
 
