--- a/Kconfig
+++ b/Kconfig
@@ -19,8 +19,8 @@ config SECURE_INFER_SHELL_CMD_SUPPORT
 	help
 	  Enabling this option will make secure inference shell commands available.
 
-config SECURE_INFER_HUK_DERIV_SEED_EXTRA
-	string "Supplementary seed label value for key derivation"
+config SECURE_INFER_HUK_DERIV_LABEL_EXTRA
+	string "Supplementary label value to append for key derivation"
 	help
 	  This string will be appended to the label used when deriving keys from
 	  the HUK in the secure HUK service. It is used exclusively by TF-M, but
