--- a/tfm_secure_partitions/tfm_tflm_service/CMakeLists.txt
+++ b/tfm_secure_partitions/tfm_tflm_service/CMakeLists.txt
@@ -54,6 +54,7 @@ target_link_libraries(tfm_app_rot_partition_tflm_service
         platform_s
         tfm_sprt
         tfm_app_rot_partition_tflm_hello_world
+        tfm_app_rot_partition_huk_deriv
 )
 
 ############################ Partition Defs ####################################
