--- a/tfm_secure_partitions/tfm_utvm_service/CMakeLists.txt
+++ b/tfm_secure_partitions/tfm_utvm_service/CMakeLists.txt
@@ -55,6 +55,7 @@ target_link_libraries(tfm_app_rot_partition_utvm_service
         platform_s
         tfm_sprt
         tfm_app_rot_partition_utvm_model
+        tfm_app_rot_partition_huk_deriv
 )
 
 ############################ Partition Defs ####################################
