Extra call to export TLS key
Export the TLS key to NS as a workaround until we are able to use the S-side
keys from Mbed TLS.

Signed-off-by: David Brown <david.brown@linaro.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,7 @@ list(APPEND secure_app_files
   src/shell/shell_common.c
   src/infer_mgmt.c
   src/key_mgmt.c
+  src/local_key.c
   src/main.c
   src/provision.c
   src/test_certs.c
