--- a/prj.conf
+++ b/prj.conf
@@ -61,7 +61,7 @@ CONFIG_HW_STACK_PROTECTION=y
 CONFIG_MPU_STACK_GUARD=y
 
 # Enable networking
-CONFIG_NETWORKING=y
+CONFIG_NETWORKING=n
 CONFIG_NET_IPV6=n
 CONFIG_NET_IPV4=y
 CONFIG_NET_IF_MAX_IPV4_COUNT=2
