kconfig: Add network config overlay
Adds a separate overlay file for network kconfig options.

Signed-off-by: Kevin Townsend <kevin.townsend@linaro.org>

--- a/prj.conf
+++ b/prj.conf
@@ -4,32 +4,28 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
+# Logging
 CONFIG_LOG=y
-CONFIG_LOG_MODE_IMMEDIATE=y
 CONFIG_LOG_RUNTIME_FILTERING=y
 CONFIG_LOG_DEFAULT_LEVEL=4
+CONFIG_LOG_MODE_IMMEDIATE=y
 
-# PSA shell
+# TF-M
+CONFIG_BUILD_WITH_TFM=y
+CONFIG_TFM_IPC=y
+# CONFIG_TFM_CMAKE_BUILD_TYPE_DEBUG=y
+
+# Shell commands
 CONFIG_SHELL=y
 CONFIG_SHELL_HISTORY=y
 CONFIG_SHELL_VT100_COLORS=y
 CONFIG_SHELL_CMDS=n
 CONFIG_SECURE_INFER_SHELL_CMD_SUPPORT=y
-CONFIG_AZURE_SHELL_CMD_SUPPORT=y
-CONFIG_NET_SHELL=y
-
-CONFIG_BUILD_WITH_TFM=y
-CONFIG_TFM_IPC=y
-
-# Enable the HTTP client
-CONFIG_HTTP_CLIENT=y
-
-# Enable TF-M debug build
-# CONFIG_TFM_CMAKE_BUILD_TYPE_DEBUG=y
 
 # The Zephyr CMSIS emulation assumes that ticks are ms, currently
 CONFIG_SYS_CLOCK_TICKS_PER_SEC=1000
 
+# Stack/Heap config
 CONFIG_MAIN_STACK_SIZE=8192
 CONFIG_HEAP_MEM_POOL_SIZE=4096
 
@@ -60,73 +56,5 @@ CONFIG_JSON_LIBRARY=y
 CONFIG_HW_STACK_PROTECTION=y
 CONFIG_MPU_STACK_GUARD=y
 
-# Enable networking
-CONFIG_NETWORKING=n
-CONFIG_NET_IPV6=n
-CONFIG_NET_IPV4=y
-CONFIG_NET_IF_MAX_IPV4_COUNT=2
-CONFIG_NET_IF_UNICAST_IPV4_ADDR_COUNT=3
-
-CONFIG_NET_TCP=y
-
-CONFIG_NET_SOCKETS=y
-CONFIG_NET_SOCKETS_SOCKOPT_TLS=y
-
-CONFIG_NET_DHCPV4=y
-
-CONFIG_SOCKS=n
-
-CONFIG_MQTT_LIB=y
-CONFIG_MQTT_LIB_TLS=y
-
-CONFIG_NET_CONFIG_SETTINGS=y
-CONFIG_NET_CONNECTION_MANAGER=y
-CONFIG_NET_MGMT_EVENT_STACK_SIZE=1024
-CONFIG_NET_MGMT_EVENT_QUEUE_SIZE=5
-CONFIG_NET_MGMT_EVENT_LOG_LEVEL_DBG=n
-
-# This is too small, for some reason.
-CONFIG_NET_CONNECTION_MANAGER_STACK_SIZE=1024
-
-# NEVER NEVER DO THIS
-CONFIG_TEST_RANDOM_GENERATOR=y
-
-CONFIG_DNS_RESOLVER=y
-CONFIG_DNS_RESOLVER_ADDITIONAL_BUF_CTR=2
-
-# Enable Logging support
-CONFIG_LOG_MODE_IMMEDIATE=y
-CONFIG_NET_LOG=n
-CONFIG_NET_TCP_LOG_LEVEL_DBG=n
-CONFIG_NET_SOCKETS_LOG_LEVEL_DBG=y
-CONFIG_MQTT_LOG_LEVEL_DBG=n
-CONFIG_NET_DHCPV4_LOG_LEVEL_INF=n
-CONFIG_NET_IF_LOG_LEVEL_DBG=y
-CONFIG_MBEDTLS_DEBUG=y
-CONFIG_MBEDTLS_DEBUG_LEVEL=4
-CONFIG_SOCKS_LOG_LEVEL_DBG=n
-CONFIG_NET_CONFIG_LOG_LEVEL_DBG=n
-CONFIG_NET_CONNECTION_MANAGER_LOG_LEVEL_DBG=n
-CONFIG_DNS_RESOLVER_LOG_LEVEL_DBG=n
-CONFIG_NET_CONTEXT_LOG_LEVEL_DBG=n
-CONFIG_ETHERNET_LOG_LEVEL_ERR=y
-
-CONFIG_NET_BUF_RX_COUNT=72
-CONFIG_NET_BUF_TX_COUNT=72
-# CONFIG_NET_BUF_DATA_SIZE=512
-
-# The net layer needs bigger stacks if we log messages.
-CONFIG_NET_RX_STACK_SIZE=2500
-CONFIG_NET_TX_STACK_SIZE=2500
-
-# For debugging.
-CONFIG_HW_STACK_PROTECTION=y
-CONFIG_MPU_STACK_GUARD=y
-
-# Increased workqueue stack needed for TLS.
-CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2048
-
 # Large for now, but this really shouldn't be this large.
 CONFIG_SHELL_STACK_SIZE=16384
-
-CONFIG_TLS_MAX_CREDENTIALS_NUMBER=8
