sample: tfm: Add new secure services to get TFLM and model version
- Add the TFLM and model version details
- Add the dedicated secure service one to get the TFLM version and another
  to get the TFLM sine model version
- Add the secure service interface which allows to communicate to the
  version secure services.

Signed-off-by: Rajkumar Kanagaraj <rajkumar.kanagaraj@linaro.org>

--- a/tfm_secure_partitions/tfm_tflm_service/CMakeLists.txt
+++ b/tfm_secure_partitions/tfm_tflm_service/CMakeLists.txt
@@ -27,6 +27,7 @@ target_include_directories(tfm_partitions
 target_sources(tfm_app_rot_partition_tflm_service
     PRIVATE
         tfm_tflm_service.c
+        tfm_tflm_service_api.c
 )
 
 # The generated sources
