sample: tfm: Add new secure services to get MicroTVM and model version
- Add the MicroTVM and model version details
- Add the dedicated secure service one to get the MicroTVM version and
  another to get the MicroTVM sine model version
- Add the secure service interface which allows to communicate to the
  version secure services.

Signed-off-by: Rajkumar Kanagaraj <rajkumar.kanagaraj@linaro.org>

--- a/tfm_secure_partitions/tfm_utvm_service/CMakeLists.txt
+++ b/tfm_secure_partitions/tfm_utvm_service/CMakeLists.txt
@@ -27,6 +27,7 @@ target_sources(tfm_app_rot_partition_utvm_service
     PRIVATE
         tfm_utvm_service.c
         tfm_utvm_platform/utvm_platform.c
+        tfm_utvm_service_api.c
 )
 
 # The generated sources
