--- a/tfm_secure_partitions/tfm_utvm_service/tfm_utvm_service.yaml
+++ b/tfm_secure_partitions/tfm_utvm_service/tfm_utvm_service.yaml
@@ -24,6 +24,28 @@
       "version": 1,
       "version_policy": "STRICT"
     },
+    {
+      "name": "TFM_UTVM_VERSION_INFO_SERVICE",
+      # SIDs must be unique, ones that are currently in use are documented in
+      # tfm_secure_partition_addition.rst on line 184
+      "sid": "0x4c690321", # Bits [31:12] denote the vendor (change this),
+                          # bits [11:0] are arbitrary at the discretion of the
+                          # vendor.
+      "non_secure_clients": false,
+      "version": 1,
+      "version_policy": "STRICT"
+    },
+        {
+      "name": "TFM_UTVM_MODEL_VERSION_INFO_SERVICE",
+      # SIDs must be unique, ones that are currently in use are documented in
+      # tfm_secure_partition_addition.rst on line 184
+      "sid": "0x4c690322", # Bits [31:12] denote the vendor (change this),
+                          # bits [11:0] are arbitrary at the discretion of the
+                          # vendor.
+      "non_secure_clients": false,
+      "version": 1,
+      "version_policy": "STRICT"
+    },
   ],
 
   "dependencies": [
