sample: cose: Create Attestation Application Token
New function added to construct attestation token with claim data of
TFLM and model version, MicroTVM and model version and those claim
version details CBOR encoded with a dedicated label to differentiate.

Signed-off-by: Rajkumar Kanagaraj <rajkumar.kanagaraj@linaro.org>

--- a/tfm_secure_partitions/tfm_huk_deriv_srv/CMakeLists.txt
+++ b/tfm_secure_partitions/tfm_huk_deriv_srv/CMakeLists.txt
@@ -27,6 +27,7 @@ target_sources(tfm_app_rot_partition_huk_deriv
         tfm_huk_deriv_srv.c
         tfm_huk_deriv_srv_api.c
         cbor_cose.c
+        aat.c
 )
 
 # The generated sources
