--- a/tfm_secure_partitions/tfm_huk_deriv_srv/tfm_huk_deriv_srv.yaml
+++ b/tfm_secure_partitions/tfm_huk_deriv_srv/tfm_huk_deriv_srv.yaml
@@ -76,10 +76,23 @@
       "non_secure_clients": true,
       "version": 1,
       "version_policy": "STRICT"
-    }
+    },
+    {
+      "name": "TFM_HUK_AAT",
+       "sid": "0x4c690108", # Bits [31:12] denote the vendor (change this),
+                           # bits [11:0] are arbitrary at the discretion of the
+                           # vendor.
+        "non_secure_clients": true,
+        "version": 1,
+        "version_policy": "STRICT"
+    },
   ],
 
   "dependencies": [
-    "TFM_CRYPTO"
+    "TFM_CRYPTO",
+    "TFM_TFLM_VERSION_INFO_SERVICE",
+    "TFM_TFLM_MODEL_VERSION_INFO_SERVICE",
+    "TFM_UTVM_VERSION_INFO_SERVICE",
+    "TFM_UTVM_MODEL_VERSION_INFO_SERVICE"
   ]
 }
