sp: Add persistent service IDs to each partition
The partition ID (pid) is used by the key derivation to derive unique
keys.  However, if the pid is not specified in the manifest, the build
system will generate some for it.  This, however, means these IDs can
change across builds.  Assign each partition a fixed ID.

Since we're breaking new ground here, we have decided our vendor ID will
be the ascii for "Li" (the start of Linaro), 0x4c69, the next byte will
be the partition we are describing. We'll leave the lower bits available
so that SIDs and PIDs can match up.

Signed-off-by: David Brown <david.brown@linaro.org>

--- a/tfm_secure_partitions/tfm_manifest_list.yaml.in
+++ b/tfm_secure_partitions/tfm_manifest_list.yaml.in
@@ -19,6 +19,7 @@
       "tfm_partition_ipc": true,
       "version_major": 0,
       "version_minor": 1,
+      "pid": 0x4c690100,
       "linker_pattern": {
         "library_list": [
            "*tfm_*partition_huk_deriv.*"
@@ -33,6 +34,7 @@
       "tfm_partition_ipc": true,
       "version_major": 0,
       "version_minor": 1,
+      "pid": 0x4c690200,
       "linker_pattern": {
         "library_list": [
            "*tfm_*partition_tflm.*"
@@ -47,6 +49,7 @@
       "tfm_partition_ipc": true,
       "version_major": 0,
       "version_minor": 1,
+      "pid": 0x4c690300,
       "linker_pattern": {
         "library_list": [
            "*tfm_*partition_utvm.*"
