sample: huk: Update a sign service to include PS-based NV counters
- On every boot (or first use), read the counter, store it locally, and
  write back on the current counter value whenever is greater than the
  threshold limit set by project config (by default value set as 100).
- Roll over NV counter is incremented whenever the current NV counter
  value is greater than the UINT32_MAX value, reset current NV counter,
  write back current NV counter and rollover counter to PS.

Signed-off-by: Rajkumar Kanagaraj <rajkumar.kanagaraj@linaro.org>

--- a/tfm_secure_partitions/tfm_huk_deriv_srv/CMakeLists.txt
+++ b/tfm_secure_partitions/tfm_huk_deriv_srv/CMakeLists.txt
@@ -22,12 +22,22 @@ target_include_directories(tfm_partitions
         ${CMAKE_BINARY_DIR}/tfm_secure_partitions/tfm_huk_deriv_srv
 )
 
+if(NV_PS_COUNTERS_SUPPORT)
+    list(APPEND tfm_huk_service_files
+      nv_ps_counters.c
+    )
+endif()
+
+list(APPEND tfm_huk_service_files
+    tfm_huk_deriv_srv.c
+    tfm_huk_deriv_srv_api.c
+    cbor_cose.c
+    aat.c
+)
+
 target_sources(tfm_app_rot_partition_huk_deriv
     PRIVATE
-        tfm_huk_deriv_srv.c
-        tfm_huk_deriv_srv_api.c
-        cbor_cose.c
-        aat.c
+        ${tfm_huk_service_files}
 )
 
 # The generated sources
