--- a/tfm_secure_partitions/tfm_huk_deriv_srv/tfm_huk_deriv_srv.yaml
+++ b/tfm_secure_partitions/tfm_huk_deriv_srv/tfm_huk_deriv_srv.yaml
@@ -77,6 +77,7 @@
     "TFM_TFLM_VERSION_INFO_SERVICE",
     "TFM_TFLM_MODEL_VERSION_INFO_SERVICE",
     "TFM_UTVM_VERSION_INFO_SERVICE",
-    "TFM_UTVM_MODEL_VERSION_INFO_SERVICE"
+    "TFM_UTVM_MODEL_VERSION_INFO_SERVICE",
+    "TFM_PROTECTED_STORAGE_SERVICE"
   ]
 }
