Sample: CMake: Add Kconfig and CMake update
- Add NV_PS_COUNTERS_SUPPORT and
  NV_COUNTER_TRACKER_THRESHOLD_LIMIT config support.
- Set CMake property to pass those 2 macros to TFM cmake build.

Signed-off-by: Rajkumar Kanagaraj <rajkumar.kanagaraj@linaro.org>

--- a/Kconfig
+++ b/Kconfig
@@ -55,4 +55,17 @@ config BOOTSTRAP_SERVER_HOST
 	  provisioning will connect to to retrieve this devices
 	  initial provisioning data.
 
+config NV_PS_COUNTERS_SUPPORT
+	bool "Protected storage-based NV counter support enables."
+	default y
+	help
+	  Protected storage-based NV counter support enables.
+
+config NV_COUNTER_TRACKER_THRESHOLD_LIMIT
+	int "Threshold limit to write current protected storage-based NV counter value to persistent memory."
+	default 100
+	depends on NV_PS_COUNTERS_SUPPORT
+	help
+	  Threshold limit to write current protected storage-based NV counter value to persistent memory.
+
 source "Kconfig.zephyr"
