bootstramp: Rename caserver to bootstrap
To reflect the name change of the bootstrap server (from linaroca),
change references in the code from caserver to bootstrap.

Signed-off-by: David Brown <david.brown@linaro.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,7 +58,7 @@ list(APPEND secure_app_files
 if(CONFIG_APP_NETWORKING)
   list(APPEND secure_app_files
     src/azure.c
-    src/caserver.c
+    src/bootstrap.c
     src/dhcpwait.c
   )
 endif()
