--- a/tfm_secure_partitions/tfm_manifest_list.yaml.in
+++ b/tfm_secure_partitions/tfm_manifest_list.yaml.in
@@ -56,5 +56,20 @@
          ],
       }
     },
+    {
+      "name": "Test Helper Service",
+      "short_name": "TFM_SP_TEST_HELPER_SERVICE",
+      "manifest": "@APP_SOURCE_DIR@/tfm_secure_partitions/tfm_test_helper_service/tfm_test_helper_service.yaml",
+      "output_path": "@TFM_BINARY_DIR@/tfm_secure_partitions/tfm_test_helper_service",
+      "tfm_partition_ipc": true,
+      "version_major": 0,
+      "version_minor": 1,
+      "pid": 0x4c690400,
+      "linker_pattern": {
+        "library_list": [
+           "*tfm_*partition_test_helper.*"
+         ],
+      }
+    },
   ]
 }
