sample: si: Upgrade to use zephyr latest master
- Fix the header with prefix zephyr
- Update the readme

Signed-off-by: Rajkumar Kanagaraj <rajkumar.kanagaraj@linaro.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,7 +86,7 @@ target_compile_definitions(app PRIVATE
   TFM_PARTITION_HUK_KEY_DERIVATION
   TFM_PARTITION_TFLM_SERVICE
   TFM_PARTITION_UTVM_SERVICE
-  NANOCBOR_BYTEORDER_HEADER=<sys/byteorder.h>
+  NANOCBOR_BYTEORDER_HEADER=<zephyr/sys/byteorder.h>
   NANOCBOR_BE64TOH_FUNC=sys_be64_to_cpu
   NANOCBOR_HTOBE64_FUNC=sys_cpu_to_be64
   NANOCBOR_HTOBE32_FUNC=sys_cpu_to_be32
