--- a/tfm_secure_partitions/tfm_utvm_service/tfm_utvm_service.yaml
+++ b/tfm_secure_partitions/tfm_utvm_service/tfm_utvm_service.yaml
@@ -1,7 +1,7 @@
 #-------------------------------------------------------------------------------
 # Copyright (c) 2020-2021, Arm Limited. All rights reserved.
 #
-# SPDX-License-Identifier: BSD-3-Clause
+# SPDX-License-Identifier: GPL-3.0
 #
 #-------------------------------------------------------------------------------
 
